2023-01-08 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/tests/runtest.bat Added new tests for WEBP, BMP2 & BMP3.
	These tests are passing.

2023-01-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated the news.

	* It is 2023 now!  Update copyrights, rotate changelogs, etc.

	* magick/blob.c (OpenBlob): Zlib has never supported opening Unix
	'compress' .Z files (although gzip does).  So don't open such
	files using zlib.

	* coders/sun.c: Add IM1, IM8, and IM24 magick aliases for Sun
	Raster format since those are the historically correct extensions.

2023-01-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sun.c (ReadSUNImage): Address oss-fuzz 54810
	"graphicsmagick:coder_SUN_fuzzer: Heap-buffer-overflow in
	ReadSUNImage".

	* coders/pict.c (WritePICTImage): Fix use of logical operator
	where binary operator is needed.

2023-01-05 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/installer/inc/body.isx 64 bit distribution MUST NOT
	be installed on pure 32 bit system. Sanity check added.

2023-01-05 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/installer/inc/body.isx
	* VisualMagick/installer/inc/files-dlls.isx
	(VisualMagick/installer/redist/VC2008SP1/vcredist_x64.exe must be downloaded from www).
	(VisualMagick/installer/redist/VC2008SP1/vcredist_x86.exe must be downloaded from www).
	Fix graphics magick installer for Windows.

2023-01-04 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/tests/runtest.bat Added new tests for PGX (jp2),
	MAT, uncommented test for EPDF and PICON.

2023-01-03 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/jp2/src/appl/UTILITY.txt removed fuzz.c.

2023-01-03 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/jp2/src/libjasper/pgx/LIBRARY.txt
	* jp2/src/libjasper/include/jasper/jas_config.h
	PGX codec was not compilled into gm, now added.

2023-01-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pict.c: Add more tracing.
