@@ -395,5 +395,6 @@ building under Microsoft Windows:
   entity has paid to allow use of any applicable HEVC patents on their
   device, or that the patents do not apply in their country.
 
-* GraphicsMagick requires the JPEG XL library from
-  https://github.com/libjxl/libjxl to read and write JPEG XL files.
+* GraphicsMagick requires the JPEG XL (JXL) library (release 0.7.0 or
+  later) from https://github.com/libjxl/libjxl to read and write JPEG
+  XL files.
