@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020230107"
-#define public MagickPackageReleaseDate "snapshot-20230107"
+#define public MagickPackageVersionAddendum ".020230108"
+#define public MagickPackageReleaseDate "snapshot-20230108"
