@@ -840,8 +840,10 @@ multi-threaded programs than umem, but is less memory efficient.</p>
 </div>
 <div class="section" id="jpeg-xl">
 <h1><a class="toc-backref" href="#id5">JPEG XL</a></h1>
-<p>JPEG XL seems to be a work in progress.  For development testing with
-it we build it as described on its git page
+<p>JPEG XL seems to be a work in progress, with previous APIs being
+deprecated, and replacement APIs introduced.  We have taken an
+approach to use the latest recommended APIs.  For development testing
+with it (0.7.0 or later) we build it as described on its git page
 (<a class="reference external" href="https://github.com/libjxl/libjxl">https://github.com/libjxl/libjxl</a>), but configure and build it like:</p>
 <pre class="literal-block">git clone https://github.com/libjxl/libjxl.git --recursive --shallow-submodules
 cd ./libjxl
@@ -853,6 +855,8 @@ cmake --build . -- -j$(nproc)
 make test
 [ check for 100% tests passed ]
 make install</pre>
+<p>While the JPEG XL project recommends using Clang, it is observed to
+work without known issues when compiled using GCC 9.4.0.</p>
 </div>
 <div class="section" id="popular-distribution-packages">
 <h1><a class="toc-backref" href="#id6">Popular Distribution Packages</a></h1>
