@@ -421,8 +421,9 @@ software patents.  The user is responsible for assuring that some
 entity has paid to allow use of any applicable HEVC patents on their
 device, or that the patents do not apply in their country.</p>
 </li>
-<li><p>GraphicsMagick requires the JPEG XL library from
-<a class="reference external" href="https://github.com/libjxl/libjxl">https://github.com/libjxl/libjxl</a> to read and write JPEG XL files.</p></li>
+<li><p>GraphicsMagick requires the JPEG XL (JXL) library (release 0.7.0 or
+later) from <a class="reference external" href="https://github.com/libjxl/libjxl">https://github.com/libjxl/libjxl</a> to read and write JPEG
+XL files.</p></li>
 </ul>
 </div>
 </div>
